public/static/css/main.css
/*Royal blue of play icons: color: #4168e0;*/

body {
  font-family: Roboto, Arial;
}

a {
  text-decoration: none !important;
}

#body_index ul.videos a {
  color: #0f1936;
}

@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: normal;
  src: url("//ssl.gstatic.com/fonts/roboto/v9/vxNK-E6B13CyehuDCmvQvw.woff") format("woff");
}

ul.videos li {
  /*padding: 0px 0 0 52px;*/
  list-style-type: none;
}

ul.videos li span {
  background: url("/static/img/video-play-middle-na.png") no-repeat top left;
  line-height: 48px;
  height: 48px;
  vertical-align: middle;
  padding: 0px 0 0 52px;
  display: inline-block
}

ul.videos li a span {
  background: url("/static/img/video-play-middle.png") no-repeat top left;
}

ul.videos li:first-child:last-child a span {
  background: url("/static/img/video-play.png") no-repeat top left;
}

ul.videos li:first-child:last-child span {
  background: url("/static/img/video-play-na.png") no-repeat top left;
}

ul.videos li:first-child a span {
  background: url("/static/img/video-play-top.png") no-repeat top left;
}

ul.videos li:first-child span {
  background: url("/static/img/video-play-top-na.png") no-repeat top left;
}

ul.videos li:last-child a span {
  background: url("/static/img/video-play-bottom.png") no-repeat top left;
}

ul.videos li:last-child span {
  background: url("/static/img/video-play-bottom-na.png") no-repeat top left;
}

a.twitter-follow-button {
  right: 50px;
}

#footer {
  bottom: 0;
  height: 40px;
}

